[package]
name = "xml2lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#calamine = {extern = "./libcalamine.rlib"}
piccolo = "0.3.1"
calamine = {path = "../../calamine/calamine"}
clap = { version = "4.4", features = ["cargo"] }